--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Away</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <a href="./index.html">Grungle.</a>
